# School-Homeworks

./: final V1
LAB – EXAM 3/: LAB – EXAM 3.sln
LAB – EXAM 3/LAB – EXAM 3/: Car.cpp  Car.h  FormulaCar.cpp  FormulaCar.h  LAB – EXAM 3.vcxproj  LAB – EXAM 3.vcxproj.filters  Main.cpp  Motorcycle.cpp  Motorcycle.h  RacingVehicle.cpp  RacingVehicle.h  Track.cpp  Track.h
LAB – EXAM 3/LAB – EXAM 3/x64/Debug/: LAB – EXAM 3.exe.recipe  LAB – EXAM 3.ilk  vc143.idb
LAB – EXAM 3/LAB – EXAM 3/x64/Debug/LAB – EXAM 3.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+5 more)
LAB-EXAM 4/: CMakeLists.txt  LAB-EXAM 4.sln
LAB-EXAM 4/LAB-EXAM 4/: Calculator.cpp  LAB-EXAM 4.vcxproj  LAB-EXAM 4.vcxproj.filters  Operation.cpp  Operation.h  OutputFile.txt
LAB-EXAM 4/LAB-EXAM 4/x64/Debug/: LAB-EXAM 4.exe.recipe  LAB-EXAM 4.ilk  vc143.idb
Labwork 2/: CMakeLists.txt  Labwork 2.sln
Labwork 2/Labwork 2/: Labwork 2.cpp  Labwork 2.vcxproj  Labwork 2.vcxproj.filters  Planet.cpp  Planet.h  Spaceship.cpp  Spaceship.h
Labwork 2/Labwork 2/x64/Debug/: Labwork 2.exe.recipe  Labwork 2.ilk  vc143.idb
Labwork 2/Labwork 2/x64/Debug/Labwork 2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Labwork 2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Labwork6/: Labwork6.sln
Labwork6/Labwork6/: Labwork6.vcxproj  Main.cpp  Monster.cpp  Monster.h  Player.cpp  Player.h
Labwork6/Labwork6/x64/Debug/: Labwork6.exe.recipe  Labwork6.ilk  vc143.idb
question3/: question3.sln
question3/question3/: question3.cpp  question3.vcxproj
question3/question3/x64/Debug/: vc143.idb
(+15 files in other folders)
