cmake_minimum_required(VERSION 3.25)
project(Labwork_2)

set(CMAKE_CXX_STANDARD 14)

include_directories("Labwork 2")

add_executable(Labwork_2
        "Labwork 2/Labwork 2.cpp"
        "Labwork 2/Planet.cpp"
        "Labwork 2/Planet.h"
        "Labwork 2/Spaceship.cpp"
        "Labwork 2/Spaceship.h")
